Added tests for TagRepository.